fig bug client hover brand and social icon space

--- a/index.html
+++ b/index.html
@@ -65,11 +65,21 @@
                     <p class="client__desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="client__img">
-                    <img src="./assets/img/meundies.svg" alt="meundies">
-                    <img src="./assets/img/slack.svg" alt="meundies">
-                    <img src="./assets/img/amazon.svg" alt="meundies">
-                    <img src="./assets/img/comerce.svg" alt="meundies">
-                    <img src="./assets/img/sitepoint.svg" alt="meundies">
+                    <a href="#!">
+                        <img src="./assets/img/meundies.svg" alt="meundies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/slack.svg" alt="slack">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/amazon.svg" alt="amazon">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/comerce.svg" alt="comerce">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/sitepoint.svg" alt="sitepoint">
+                    </a>
                 </div>
             </div>
         </div>
